Fix scroll into whitespace.

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -12,11 +12,17 @@
   padding: 0;
 }
 html, body {
+  position: fixed;
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
 body {
-  overflow: hidden;
+  -ms-content-zooming: none;
+  backface-visibility:hidden;
+  -webkit-backface-visibility:hidden;
+  -ms-touch-action:none;
+
   background: #80a670; /* Old browsers */
   background: -moz-linear-gradient(top, #80a670 0%, #4e6142 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #80a670 0%,#4e6142 100%); /* Chrome10-25,Safari5.1-6 */
